--- a/index.html
+++ b/index.html
@@ -4,14 +4,56 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Weather Dashboard</title>
-    <!--CSS Stylesheet Link-->
+
+    <!-- Bootstrap Link -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <!-- CSS Stylesheet Link -->
     <link href="assets/css/style.css" rel="Stylesheet" />
   </head>
 
-  <body>
-    <h1>Weather Dashboard</h1>
+  <body class="m-4">
+    <header>
+      <h1>Weather Dashboard</h1>
+    </header>
 
+    <main class="d-flex justify-space-between">
+      <!-- LEFT COLUMN -->
+      <div class="col-12 col-md-3">
+        <!-- Insert Form  -->
+        <form class="d-flex flex-column" id="city-form">
+          <label for="city-name" class="city-label">Search for a City:</label>
+          <input
+            type="text"
+            name="city-name"
+            id="city-name"
+            placeholder="Austin"
+            class="city-input"
+          />
+          <button
+            type="submit"
+            form="city-form"
+            class="search-btn btn btn-primary my-3"
+            id="searchBtn"
+          >
+            Search
+          </button>
+        </form>
+      </div>
+
+      <!-- RIGHT COLUMN -->
+      <div class="col-12 col-md-8 ms-2">
+        <!--dynamically generate buttons-->
+        <div id="weather-info"></div>
+      </div>
+    </main>
+
+    <!-- jQuery Link -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- JavaScript Link -->
     <script src="assets/js/script.js"></script>
   </body>
