--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Weather Dashboard</title>
-
     <!-- Bootstrap Link -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -14,47 +12,63 @@
     />
     <!-- CSS Stylesheet Link -->
     <link href="assets/css/style.css" rel="Stylesheet" />
+
+    <title>Weather Dashboard</title>
   </head>
 
   <body class="m-4">
-    <header>
+    <header class="text-center p-2">
       <h1>Weather Dashboard</h1>
     </header>
 
-    <main class="d-flex flex-wrap justify-space-between">
-      <!-- LEFT COLUMN -->
-      <section class="col-12 col-md-3">
-        <!-- Insert Form  -->
-        <form class="d-flex flex-column" id="city-form">
-          <label for="city-name" class="city-label">Search for a City:</label>
-          <input
-            type="text"
-            name="city-name"
-            id="city-name"
-            placeholder="Austin"
-            class="city-input"
-          />
-          <button
-            type="submit"
-            form="city-form"
-            class="search-btn btn btn-primary my-3"
-            id="searchBtn"
-          >
-            Search
-          </button>
-          <span class="no-data"></span>
-        </form>
-      </section>
+    <main class="container-fluid">
+      <div class="row">
+        <!-- LEFT COLUMN: search form -->
+        <section class="col-12 col-md-3 p-2">
+          <!-- Insert Form  -->
+          <form class="d-flex flex-column" id="city-form">
+            <h4>Search for a City:</h4>
+            <input
+              id="city-input"
+              type="text"
+              autofocus="true"
+              placeholder="Austin"
+            />
+            <button
+              type="submit"
+              form="city-form"
+              class="search-btn btn btn-primary my-3"
+            >
+              <!-- Form refers to the form the button is associated to -->
+              Search
+            </button>
+          </form>
+          <!-- Container where all the users past searches are stored -->
+          <div id="past-search-buttons"></div>
+        </section>
 
-      <!-- RIGHT COLUMN -->
-      <section class="col-12 col-md-8 ms-2">
-        <!--dynamically generate buttons-->
-        <div id="weather-info"></div>
-      </section>
+        <!-- RIGHT COLUMN -->
+        <!-- Current forecast section -->
+        <div class="col-12 col-md-9 ms-2">
+          <section id="current-forecast" class="row border">
+            <div class="col-12">
+              <h2 id="searched-city"></h2>
+              <div id="current-weather-container"></div>
+            </div>
+          </section>
+          <!-- 5 day forecast -->
+          <section id="five-day-forecast">
+            <h2 class="col-12" id="forecast-title"></h2>
+            <div class="d-flex" id="forecast-container"></div>
+          </section>
+        </div>
+      </div>
     </main>
 
     <!-- jQuery Link -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- Moments.js Link -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
     <!-- JavaScript Link -->
     <script src="assets/js/script.js"></script>
   </body>
