added weather icon, wind speed, temperature, and humidity to the five day forecast

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <section id="current-forecast" class="row border">
             <div class="col-12">
               <h2 id="searched-city"></h2>
-              <div id="current-weather-container"></div>
+              <div id="current-weather-container" class="list-group"></div>
             </div>
           </section>
           <!-- 5 day forecast -->
