refined placeholder text in input

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               id="city-input"
               type="text"
               autofocus="true"
-              placeholder="Enter city name."
+              placeholder="Enter city name"
               class="text-capitalize"
             />
             <button type="submit" form="city-form" class="btn btn-primary my-3">
