added in error message and allowed last city search to show up on reload

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <!-- RIGHT COLUMN -->
         <!-- Current forecast section -->
         <div class="col-12 col-md-9">
+          <div id="error-message"></div>
           <section class="card mt-2" id="current-forecast">
             <div class="card-body">
               <div class="d-flex flex-row">
